[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "0.16", features = ["webgl"] }
winit = "0.28"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
bytemuck = { version = "1.13.1", features = ["derive"] }
map-range = "0.1.1"
oneshot = "0.1.5"
rand = "0.8.5"
getrandom = { version = "0.2.9", features = ["js"] }
js-sys = "0.3.62"